# robot_trainer

./: .gitignore  README.md  drizzle.config.ts  forge.config.ts  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.renderer.config.mts  vitest.config.ts
.github/: copilot-instructions.md
drizzle/: 0000_romantic_jack_murdock.sql  0001_curved_leader.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
scripts/: download_ffmpeg.js  run_video_manager_test.js
src/: app.tsx  electron-api.d.ts  main.ts  preload.ts  renderer.ts
src/db/: compile_migrations.ts  db.ts  migrate.ts  migrations.json  schema.ts
src/lib/: VideoManager.ts  config_manager.test.ts  config_manager.ts  robot.ts  uiStore.ts
src/python/: env-config.json  pyproject.toml  simulate.py
src/tests/: cameras.spec.ts  fixtures.ts  navigation.spec.ts  robots.spec.ts  setup_wizard.spec.ts  setup_wizard_first_load.spec.ts  setup_wizard_menu.spec.ts  system_settings.spec.ts  training_studio.spec.ts
src/ui/: ResourceManager.tsx  VideoPlayer.tsx
src/views/: CameraConfigurationWizard.tsx  Cameras.tsx  RobotConfigurationWizard.tsx  RobotDevicesWizard.tsx  Robots.tsx  SetupWizard.tsx  SystemSettings.tsx  TrainingStudio.tsx
src/views/__tests__/: CameraConfigurationWizard.test.tsx  RobotDevicesWizard.test.tsx
test-results/: .last-run.json
test-results/setup_wizard-SetupWizard-U-13759-dvances-to-calibration-page/: error-context.md
test-results/setup_wizard-SetupWizard-U-cce5a-d-confirm-python-path-modal/: error-context.md
